fix color navbar collapse

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4559,10 +4559,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
   }
-
-  .navbar-default .navbar-nav {
-    background-color: white;
-  }
   
 
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
@@ -4651,6 +4647,11 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-form {
   border-color: #101010;
 }
+
+.navbar-collapse {
+  background-color: transparent;
+}
+
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
@@ -4664,6 +4665,12 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
     background-color: #080808;
   }
+
+
+  .navbar-collapse {
+    background-color: white;
+  }
+
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #9d9d9d;
   }
